# ART

./: CMakeLists.txt  main.cpp
src/: Box.cpp  Box.h  CMakeLists.txt  Camera.cpp  Camera.h  CmdParser.cpp  CmdParser.h  Intersection.cpp  Intersection.h  IsaacRand.cc  IsaacRand.hh  Light.cpp  Light.h  Plane.cpp  Plane.h  Primitive.cpp  Primitive.h  RTEngine.cpp  RTEngine.h  Ray.cpp  Ray.h  SDLEngine.cpp  SDLEngine.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  Timer.cpp  Timer.h  Triangle.cpp  Triangle.h  Vector.cpp  Vector.h  Write.cpp  Write.h  art.cpp  art.h  temp.cpp
